--- a/notebooks/ETL_credits.ipynb
+++ b/notebooks/ETL_credits.ipynb
@@ -26,18 +26,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd # type: ignore\n",
     "import json\n",
-    "import os"
+    "import os\n",
+    "import ast"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +240,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -326,13 +336,151 @@
    "metadata": {},
    "source": [
     "\n",
-    "\n",
-    "Finalmente, guardaremos los datos en la carpeta dataset_limpio en formato Parquet, que es más eficiente en almacenamiento y velocidad."
+    "luego desanidar los datos de los DataFrames crew_df y cast_df, que contienen información en formato de listas dentro de una columna. Primero, se identificará la estructura de estos datos para asegurarse de que sean listas de diccionarios. Luego, se usará explode() para separar cada elemento en filas individuales y pd.json_normalize() para extraer los atributos clave, como name, job y department en crew_df, y name, character y gender en cast_df. Finalmente, se añadirá la columna movie_id para mantener la relación con las películas, permitiendo un análisis más estructurado y eficiente."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                  credit_id  department  gender       id                job  \\\n",
+      "0  5630aa66c3a3681b5c00f74e  Production     2.0   7415.0            Casting   \n",
+      "1  52fe45c4c3a36847f80d9623     Writing     2.0  15244.0             Writer   \n",
+      "2  5630aac6c3a3681b5c00f759         Art     0.0  20777.0  Production Design   \n",
+      "3  5630a9f6c3a3681b4b00ea46  Production     2.0  43673.0           Producer   \n",
+      "4  5630aa0b9251414ab700d927       Sound     2.0  38309.0              Music   \n",
+      "\n",
+      "               name                      profile_path  \n",
+      "0   Rick Montgomery                              None  \n",
+      "1      Ehren Kruger  /3aC4aA5DKv6fymluT2X6UQ1iKua.jpg  \n",
+      "2  Humphrey Bangham                              None  \n",
+      "3         Tom Reeve                              None  \n",
+      "4     Gast Waltzing                              None  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Asegurar que crew_df['crew'] es una lista de diccionarios\n",
+    "crew_df['crew'] = crew_df['crew'].apply(lambda x: ast.literal_eval(x) if isinstance(x, str) else x)\n",
+    "\n",
+    "# Expandir la lista de diccionarios\n",
+    "crew_exploded = crew_df.explode('crew')\n",
+    "\n",
+    "# Convertir la columna 'crew' en un DataFrame con las claves desanidadas\n",
+    "crew_normalized = pd.json_normalize(crew_exploded['crew'])\n",
+    "\n",
+    "# Ver los primeros registros\n",
+    "print(crew_normalized.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               id                name\n",
+      "6        179616.0      Richard Spence\n",
+      "14       190103.0    Alain Desrochers\n",
+      "79         2000.0     Lewis Milestone\n",
+      "108       32375.0     Mario Monicelli\n",
+      "114       20556.0  Bertrand Tavernier\n",
+      "...           ...                 ...\n",
+      "281172   583745.0       Antoni Krauze\n",
+      "281175   100793.0    Reginald Le Borg\n",
+      "281179   114997.0         Ángel Muñiz\n",
+      "281182    19093.0     George Marshall\n",
+      "281188  1162038.0     Lawrie Brewster\n",
+      "\n",
+      "[29464 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "directores_df = crew_normalized[crew_normalized['job'] == \"Director\"]\n",
+    "print(directores_df[['id', 'name']])  # Muestra ID y nombre del director\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   cast_id               character                 credit_id  gender  \\\n",
+      "0      4.0              David Marx  52fe45c4c3a36847f80d9627     2.0   \n",
+      "1      5.0             Kurt Bishop  52fe45c4c3a36847f80d962b     2.0   \n",
+      "2      6.0            Kris Paddock  52fe45c4c3a36847f80d962f     1.0   \n",
+      "3      7.0               Mark Ohai  52fe45c4c3a36847f80d9633     0.0   \n",
+      "4      1.0  Eduardo 'Eddie' Deacon  59379a76c3a36827dd0009be     2.0   \n",
+      "\n",
+      "         id              name  order                      profile_path  \n",
+      "0     585.0      Rutger Hauer    0.0  /2x1S2VAUvZXZuDjZ4E9iEKINvNu.jpg  \n",
+      "1   37041.0   Andrew McCarthy    1.0  /bn6djJHhLF6dTIz5H3UvuCFoeLm.jpg  \n",
+      "2   47615.0   Tara Fitzgerald    2.0  /qpS1nff6LgwbWXzS14qsmW6YIOi.jpg  \n",
+      "3  202939.0      Hari Dhillon    3.0  /mzlWa84jhQNjvgHAqtnMxl03yUK.jpg  \n",
+      "4    3131.0  Antonio Banderas    0.0  /85197jARsr06xQ84NhP9YoBL3sR.jpg  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Asegurar que cast_df['cast'] es una lista de diccionarios\n",
+    "cast_df['cast'] = cast_df['cast'].apply(lambda x: ast.literal_eval(x) if isinstance(x, str) else x)\n",
+    "\n",
+    "# Expandir la lista de diccionarios\n",
+    "cast_exploded = cast_df.explode('cast')\n",
+    "\n",
+    "# Convertir la columna 'cast' en un DataFrame con las claves desanidadas\n",
+    "cast_normalized = pd.json_normalize(cast_exploded['cast'])\n",
+    "\n",
+    "# Ver los primeros registros\n",
+    "print(cast_normalized.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         id              name               character  gender\n",
+      "0     585.0      Rutger Hauer              David Marx     2.0\n",
+      "1   37041.0   Andrew McCarthy             Kurt Bishop     2.0\n",
+      "2   47615.0   Tara Fitzgerald            Kris Paddock     1.0\n",
+      "3  202939.0      Hari Dhillon               Mark Ohai     0.0\n",
+      "4    3131.0  Antonio Banderas  Eduardo 'Eddie' Deacon     2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "cast_final = cast_normalized[['id', 'name', 'character', 'gender']]\n",
+    "print(cast_final.head())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Y finalmente, voy a exportar los DataFrames cast_df y crew_df en formato Parquet para optimizar su almacenamiento y procesamiento. Me aseguro de que la carpeta de destino dataset_limpio exista, y luego guardo cada DataFrame en su respectivo archivo (cast.parquet y crew.parquet). De esta manera, los datos quedan organizados y listos para ser utilizados en futuras consultas o análisis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -355,14 +503,21 @@
     "cast_file = os.path.join(export_path, \"cast.parquet\")\n",
     "crew_file = os.path.join(export_path, \"crew.parquet\")\n",
     "\n",
-    "# Guardar en formato Parquet\n",
-    "cast_df.to_parquet(cast_file, index=False)\n",
-    "crew_df.to_parquet(crew_file, index=False)\n",
+    "# Guardar en formato Parquet los DataFrames procesados\n",
+    "cast_normalized.to_parquet(cast_file, index=False)\n",
+    "crew_normalized.to_parquet(crew_file, index=False)\n",
     "\n",
     "print(f\"Archivos exportados en: {export_path}\")\n",
     "print(f\" - Cast: {cast_file}\")\n",
     "print(f\" - Crew: {crew_file}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
