--- a/notebooks/ETL_movies.ipynb
+++ b/notebooks/ETL_movies.ipynb
@@ -37,19 +37,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
     "import json\n",
-    "\n"
+    "import ast\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -297,112 +297,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# Rellenar valores nulos en revenue y budget con 0\n",
-    "df['revenue'] = df['revenue'].fillna(0)\n",
-    "df['budget'] = df['budget'].fillna(0)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Eliminar filas con valores nulos en release_date\n",
-    "df = df.dropna(subset=['release_date'])\n",
-    "\n",
-    "# Convertir release_date a formato AAAA-mm-dd\n",
-    "df['release_date'] = pd.to_datetime(df['release_date'], errors='coerce').dt.strftime('%Y-%m-%d')\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'>' not supported between instances of 'str' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      2\u001b[39m df[\u001b[33m'\u001b[39m\u001b[33mrelease_year\u001b[39m\u001b[33m'\u001b[39m] = pd.to_datetime(df[\u001b[33m'\u001b[39m\u001b[33mrelease_date\u001b[39m\u001b[33m'\u001b[39m]).dt.year\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# Crear la columna return (revenue / budget), evitando divisiones por cero\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m df[\u001b[33m'\u001b[39m\u001b[33mreturn\u001b[39m\u001b[33m'\u001b[39m] = \u001b[43mdf\u001b[49m\u001b[43m.\u001b[49m\u001b[43mapply\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mrevenue\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[43m/\u001b[49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mbudget\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mif\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mbudget\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[43m>\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01melse\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\E B M\\Documents\\proyecto_mp\\env\\Lib\\site-packages\\pandas\\core\\frame.py:10374\u001b[39m, in \u001b[36mDataFrame.apply\u001b[39m\u001b[34m(self, func, axis, raw, result_type, args, by_row, engine, engine_kwargs, **kwargs)\u001b[39m\n\u001b[32m  10360\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcore\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mapply\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m frame_apply\n\u001b[32m  10362\u001b[39m op = frame_apply(\n\u001b[32m  10363\u001b[39m     \u001b[38;5;28mself\u001b[39m,\n\u001b[32m  10364\u001b[39m     func=func,\n\u001b[32m   (...)\u001b[39m\u001b[32m  10372\u001b[39m     kwargs=kwargs,\n\u001b[32m  10373\u001b[39m )\n\u001b[32m> \u001b[39m\u001b[32m10374\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mop\u001b[49m\u001b[43m.\u001b[49m\u001b[43mapply\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m.__finalize__(\u001b[38;5;28mself\u001b[39m, method=\u001b[33m\"\u001b[39m\u001b[33mapply\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\E B M\\Documents\\proyecto_mp\\env\\Lib\\site-packages\\pandas\\core\\apply.py:916\u001b[39m, in \u001b[36mFrameApply.apply\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    913\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.raw:\n\u001b[32m    914\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m.apply_raw(engine=\u001b[38;5;28mself\u001b[39m.engine, engine_kwargs=\u001b[38;5;28mself\u001b[39m.engine_kwargs)\n\u001b[32m--> \u001b[39m\u001b[32m916\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mapply_standard\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\E B M\\Documents\\proyecto_mp\\env\\Lib\\site-packages\\pandas\\core\\apply.py:1063\u001b[39m, in \u001b[36mFrameApply.apply_standard\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1061\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mapply_standard\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m   1062\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.engine == \u001b[33m\"\u001b[39m\u001b[33mpython\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m-> \u001b[39m\u001b[32m1063\u001b[39m         results, res_index = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mapply_series_generator\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1064\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m   1065\u001b[39m         results, res_index = \u001b[38;5;28mself\u001b[39m.apply_series_numba()\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\E B M\\Documents\\proyecto_mp\\env\\Lib\\site-packages\\pandas\\core\\apply.py:1081\u001b[39m, in \u001b[36mFrameApply.apply_series_generator\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1078\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m option_context(\u001b[33m\"\u001b[39m\u001b[33mmode.chained_assignment\u001b[39m\u001b[33m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[32m   1079\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m i, v \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(series_gen):\n\u001b[32m   1080\u001b[39m         \u001b[38;5;66;03m# ignore SettingWithCopy here in case the user mutates\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1081\u001b[39m         results[i] = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mv\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1082\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(results[i], ABCSeries):\n\u001b[32m   1083\u001b[39m             \u001b[38;5;66;03m# If we have a view on v, we need to make a copy because\u001b[39;00m\n\u001b[32m   1084\u001b[39m             \u001b[38;5;66;03m#  series_generator will swap out the underlying data\u001b[39;00m\n\u001b[32m   1085\u001b[39m             results[i] = results[i].copy(deep=\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 5\u001b[39m, in \u001b[36m<lambda>\u001b[39m\u001b[34m(x)\u001b[39m\n\u001b[32m      2\u001b[39m df[\u001b[33m'\u001b[39m\u001b[33mrelease_year\u001b[39m\u001b[33m'\u001b[39m] = pd.to_datetime(df[\u001b[33m'\u001b[39m\u001b[33mrelease_date\u001b[39m\u001b[33m'\u001b[39m]).dt.year\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# Crear la columna return (revenue / budget), evitando divisiones por cero\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m df[\u001b[33m'\u001b[39m\u001b[33mreturn\u001b[39m\u001b[33m'\u001b[39m] = df.apply(\u001b[38;5;28;01mlambda\u001b[39;00m x: x[\u001b[33m'\u001b[39m\u001b[33mrevenue\u001b[39m\u001b[33m'\u001b[39m] / x[\u001b[33m'\u001b[39m\u001b[33mbudget\u001b[39m\u001b[33m'\u001b[39m] \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mx\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mbudget\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[43m>\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m0\u001b[39;49m \u001b[38;5;28;01melse\u001b[39;00m \u001b[32m0\u001b[39m, axis=\u001b[32m1\u001b[39m)\n",
-      "\u001b[31mTypeError\u001b[39m: '>' not supported between instances of 'str' and 'int'"
-     ]
-    }
-   ],
-   "source": [
-    "# Crear la columna release_year extrayendo el año\n",
-    "df['release_year'] = pd.to_datetime(df['release_date']).dt.year\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Convertir las columnas 'revenue' y 'budget' a tipo numérico, reemplazando valores no numéricos con 0\n",
-    "df['revenue'] = pd.to_numeric(df['revenue'], errors='coerce').fillna(0)\n",
-    "df['budget'] = pd.to_numeric(df['budget'], errors='coerce').fillna(0)\n",
-    "\n",
-    "# Crear la columna 'return' evitando divisiones por cero\n",
-    "df['return'] = df.apply(lambda x: x['revenue'] / x['budget'] if x['budget'] > 0 else 0, axis=1)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Eliminar columnas no utilizadas\n",
-    "columns_to_drop = ['video', 'imdb_id', 'adult', 'original_title', 'poster_path', 'homepage']\n",
-    "df = df.drop(columns=columns_to_drop)\n",
-    "\n",
-    "# Reducir el dataset eliminando el 40% de los registros\n",
-    "df = df.sample(frac=0.6, random_state=42)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset limpio exportado en: C:\\Users\\E B M\\Documents\\proyecto_mp\\dataset_limpio\\movies_dataset_cleaned.parquet\n"
+      "0                      Toy Story\n",
+      "1                        Jumanji\n",
+      "2               Grumpier Old Men\n",
+      "3              Waiting to Exhale\n",
+      "4    Father of the Bride Part II\n",
+      "Name: title, dtype: object\n"
      ]
     }
    ],
    "source": [
-    "# Ruta de exportación\n",
-    "export_path = r\"C:\\Users\\E B M\\Documents\\proyecto_mp\\dataset_limpio\"\n",
-    "os.makedirs(export_path, exist_ok=True)\n",
+    "print(df['title'].head())  # Muestra las primeras 5 películas\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Desanidar columnas con diccionarios o listas\n",
+    "def extract_name(value):\n",
+    "    if pd.isna(value) or value == \"[]\" or value == \"{}\":\n",
+    "        return None\n",
+    "    try:\n",
+    "        data = ast.literal_eval(value)\n",
+    "        if isinstance(data, dict):\n",
+    "            return data.get('name', None)\n",
+    "        elif isinstance(data, list):\n",
+    "            return ', '.join([item['name'] for item in data if 'name' in item])\n",
+    "    except Exception as e:\n",
+    "        return None\n",
+    "    return None\n",
     "\n",
-    "# Definir ruta del archivo limpio\n",
-    "cleaned_file = os.path.join(export_path, \"movies_dataset_cleaned.parquet\")\n",
+    "df['belongs_to_collection'] = df['belongs_to_collection'].apply(extract_name)\n",
+    "df['production_companies'] = df['production_companies'].apply(extract_name)\n",
+    "df['production_countries'] = df['production_countries'].apply(extract_name)\n",
+    "df['genres'] = df['genres'].apply(extract_name)\n",
+    "df['spoken_languages'] = df['spoken_languages'].apply(extract_name)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "# Guardar en formato Parquet\n",
-    "df.to_parquet(cleaned_file, index=False)\n",
+    "# 2. Rellenar valores nulos en revenue y budget con 0\n",
+    "df['revenue'] = df['revenue'].fillna(0)\n",
+    "df['budget'] = df['budget'].fillna(0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "print(f\"Dataset limpio exportado en: {cleaned_file}\")"
+    "# 3. Eliminar valores nulos en release_date\n",
+    "df = df.dropna(subset=['release_date'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# 4. Formatear fechas y extraer el anio de estreno\n",
+    "df['release_date'] = pd.to_datetime(df['release_date'], errors='coerce')\n",
+    "df['release_year'] = df['release_date'].dt.year\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convertir 'revenue' y 'budget' a valores numéricos, reemplazando errores con 0\n",
+    "df['revenue'] = pd.to_numeric(df['revenue'], errors='coerce').fillna(0)\n",
+    "df['budget'] = pd.to_numeric(df['budget'], errors='coerce').fillna(0)\n",
+    "\n",
+    "# Crear la columna return\n",
+    "df['return'] = df.apply(lambda row: row['revenue'] / row['budget'] if row['budget'] > 0 else 0, axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Verificar qué columnas existen antes de eliminarlas\n",
+    "columns_to_drop = ['video', 'imdb_id', 'adult', 'original_title', 'poster_path', 'homepage']\n",
+    "existing_columns = [col for col in columns_to_drop if col in df.columns]\n",
+    "\n",
+    "# Eliminar solo las columnas que existen\n",
+    "df.drop(columns=existing_columns, inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                         title  release_year                      genres  \\\n",
+      "0                    Toy Story        1995.0   Animation, Comedy, Family   \n",
+      "1                      Jumanji        1995.0  Adventure, Fantasy, Family   \n",
+      "2             Grumpier Old Men        1995.0             Romance, Comedy   \n",
+      "3            Waiting to Exhale        1995.0      Comedy, Drama, Romance   \n",
+      "4  Father of the Bride Part II        1995.0                      Comedy   \n",
+      "\n",
+      "       budget      revenue     return popularity  vote_average  vote_count  \n",
+      "0  30000000.0  373554033.0  12.451801  21.946943           7.7      5415.0  \n",
+      "1  65000000.0  262797249.0   4.043035  17.015539           6.9      2413.0  \n",
+      "2         0.0          0.0   0.000000    11.7129           6.5        92.0  \n",
+      "3  16000000.0   81452156.0   5.090760   3.859495           6.1        34.0  \n",
+      "4         0.0   76578911.0   0.000000   8.387519           5.7       173.0  \n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 45379 entries, 0 to 45465\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   title         45376 non-null  object \n",
+      " 1   release_year  45376 non-null  float64\n",
+      " 2   genres        42995 non-null  object \n",
+      " 3   budget        45379 non-null  float64\n",
+      " 4   revenue       45379 non-null  float64\n",
+      " 5   return        45379 non-null  float64\n",
+      " 6   popularity    45377 non-null  object \n",
+      " 7   vote_average  45376 non-null  float64\n",
+      " 8   vote_count    45376 non-null  float64\n",
+      "dtypes: float64(6), object(3)\n",
+      "memory usage: 3.5+ MB\n",
+      "None\n",
+      "       release_year        budget       revenue        return  vote_average  \\\n",
+      "count  45376.000000  4.537900e+04  4.537900e+04  4.537900e+04  45376.000000   \n",
+      "mean    1991.881193  4.232325e+06  1.122936e+07  6.599991e+02      5.624070   \n",
+      "std       24.055360  1.743932e+07  6.438789e+07  7.469083e+04      1.915423   \n",
+      "min     1874.000000  0.000000e+00  0.000000e+00  0.000000e+00      0.000000   \n",
+      "25%     1978.000000  0.000000e+00  0.000000e+00  0.000000e+00      5.000000   \n",
+      "50%     2001.000000  0.000000e+00  0.000000e+00  0.000000e+00      6.000000   \n",
+      "75%     2010.000000  0.000000e+00  0.000000e+00  0.000000e+00      6.800000   \n",
+      "max     2020.000000  3.800000e+08  2.787965e+09  1.239638e+07     10.000000   \n",
+      "\n",
+      "         vote_count  \n",
+      "count  45376.000000  \n",
+      "mean     110.096439  \n",
+      "std      491.742894  \n",
+      "min        0.000000  \n",
+      "25%        3.000000  \n",
+      "50%       10.000000  \n",
+      "75%       34.000000  \n",
+      "max    14075.000000  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Seleccionar columnas clave para mostrar información\n",
+    "important_columns = ['title', 'release_year', 'genres', 'budget', 'revenue', 'return', 'popularity', 'vote_average', 'vote_count']\n",
+    "\n",
+    "# Mostrar las primeras filas de las columnas importantes\n",
+    "print(df[important_columns].head())\n",
+    "\n",
+    "# Mostrar información general de las columnas importantes\n",
+    "print(df[important_columns].info())\n",
+    "\n",
+    "# Descripción estadística de las columnas numéricas importantes\n",
+    "print(df[important_columns].describe())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Guardar el archivo limpio\n",
+    "df.to_parquet('C:/Users/E B M/Documents/proyecto_mp/dataset_limpio/movies_dataset_cleaned.parquet', index=False)\n"
    ]
   }
  ],
