--- a/notebooks/ETL_movies.ipynb
+++ b/notebooks/ETL_movies.ipynb
@@ -485,6 +485,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "nombre_actor = \"Antonio Banderas\"\n",
+    "\n",
+    "# Filtrar las películas donde aparece el actor\n",
+    "actor_movies = cast_df[cast_df[\"name\"] == nombre_actor].copy()\n",
+    "\n",
+    "# Asegurar que ambas columnas 'id' sean tipo str\n",
+    "actor_movies[\"id\"] = actor_movies[\"id\"].astype(str)\n",
+    "df[\"id\"] = df[\"id\"].astype(str)\n",
+    "\n",
+    "# Hacer el merge con df para obtener detalles de las películas\n",
+    "df_merge = actor_movies.merge(df, on=\"id\", how=\"left\")\n",
+    "\n",
+    "# Seleccionar columnas relevantes\n",
+    "resultado = df_merge[[\"title\", \"release_date\", \"return\", \"budget\", \"revenue\"]]\n",
+    "\n",
+    "# Mostrar resultados\n",
+    "print(resultado)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
    "outputs": [],
