Agregada función de recomendación y corregido bug en utils.py

--- a/notebooks/ETL_credits.ipynb
+++ b/notebooks/ETL_credits.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -341,41 +341,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                  credit_id  department  gender       id                job  \\\n",
-      "0  5630aa66c3a3681b5c00f74e  Production     2.0   7415.0            Casting   \n",
-      "1  52fe45c4c3a36847f80d9623     Writing     2.0  15244.0             Writer   \n",
-      "2  5630aac6c3a3681b5c00f759         Art     0.0  20777.0  Production Design   \n",
-      "3  5630a9f6c3a3681b4b00ea46  Production     2.0  43673.0           Producer   \n",
-      "4  5630aa0b9251414ab700d927       Sound     2.0  38309.0              Music   \n",
+      "                       credit_id  department  gender       id  \\\n",
+      "280024  52fe45719251416c9103294b   Directing       2    18907   \n",
+      "54384   554934b192514104ba000597        Crew       0  1463658   \n",
+      "218456  54c0c8fd9251416eae00a250         Art       0  1416801   \n",
+      "188334  52fe45809251416c910349ef     Writing       2   141064   \n",
+      "86837   52fe44e9c3a368484e03df25   Directing       2    56865   \n",
+      "250055  56548ab59251417025004276  Production       0   237160   \n",
+      "943     52fe4830c3a368484e0ed2ad   Directing       2    10439   \n",
+      "174739  53083877c3a3684208001de3     Writing       0     1223   \n",
+      "45909   576279f4c3a3683f1c000474        Crew       2    92336   \n",
+      "98536   52fe46b3c3a36847f810d757     Editing       0    98259   \n",
       "\n",
-      "               name                      profile_path  \n",
-      "0   Rick Montgomery                              None  \n",
-      "1      Ehren Kruger  /3aC4aA5DKv6fymluT2X6UQ1iKua.jpg  \n",
-      "2  Humphrey Bangham                              None  \n",
-      "3         Tom Reeve                              None  \n",
-      "4     Gast Waltzing                              None  \n"
+      "                               job               name  \\\n",
+      "280024                    Director      Richard Quine   \n",
+      "54384                       Stunts       Hannah Betts   \n",
+      "218456  Art Department Coordinator       Carrie Leigh   \n",
+      "188334                      Writer      Carl Harbaugh   \n",
+      "86837                     Director         Fruit Chan   \n",
+      "250055                    Producer   Shigemi Sugisaki   \n",
+      "943                       Director  Marshall Brickman   \n",
+      "174739                      Writer          Joel Coen   \n",
+      "45909               Makeup Effects      Clinton Wayne   \n",
+      "98536                       Editor   Danielle Fillios   \n",
+      "\n",
+      "                            profile_path  \n",
+      "280024  /bkCUG3gSO3XlvHjwO2FRy0cOYko.jpg  \n",
+      "54384                               None  \n",
+      "218456                              None  \n",
+      "188334                              None  \n",
+      "86837   /j1Xktbs6M6kNIwaLUps9swSEdVs.jpg  \n",
+      "250055                              None  \n",
+      "943     /kgFuTadgTSscJPIWuifG1pAZXf3.jpg  \n",
+      "174739  /rgVaJNkZCgMarUcZuUAsVfXMWk3.jpg  \n",
+      "45909                               None  \n",
+      "98536                               None  \n"
      ]
     }
    ],
    "source": [
-    "# Asegurar que crew_df['crew'] es una lista de diccionarios\n",
+    "\n",
+    "\n",
+    "# Asegurar que 'crew' es una lista de diccionarios\n",
     "crew_df['crew'] = crew_df['crew'].apply(lambda x: ast.literal_eval(x) if isinstance(x, str) else x)\n",
     "\n",
     "# Expandir la lista de diccionarios\n",
     "crew_exploded = crew_df.explode('crew')\n",
     "\n",
+    "# Eliminar valores nulos que pueden surgir al explotar\n",
+    "crew_exploded = crew_exploded.dropna(subset=['crew'])\n",
+    "\n",
     "# Convertir la columna 'crew' en un DataFrame con las claves desanidadas\n",
     "crew_normalized = pd.json_normalize(crew_exploded['crew'])\n",
     "\n",
-    "# Ver los primeros registros\n",
-    "print(crew_normalized.head())\n"
+    "# Mostrar 10 registros al azar\n",
+    "print(crew_normalized.sample(10))\n",
+    "\n"
    ]
   },
   {
@@ -411,26 +439,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   cast_id               character                 credit_id  gender  \\\n",
-      "0      4.0              David Marx  52fe45c4c3a36847f80d9627     2.0   \n",
-      "1      5.0             Kurt Bishop  52fe45c4c3a36847f80d962b     2.0   \n",
-      "2      6.0            Kris Paddock  52fe45c4c3a36847f80d962f     1.0   \n",
-      "3      7.0               Mark Ohai  52fe45c4c3a36847f80d9633     0.0   \n",
-      "4      1.0  Eduardo 'Eddie' Deacon  59379a76c3a36827dd0009be     2.0   \n",
-      "\n",
-      "         id              name  order                      profile_path  \n",
-      "0     585.0      Rutger Hauer    0.0  /2x1S2VAUvZXZuDjZ4E9iEKINvNu.jpg  \n",
-      "1   37041.0   Andrew McCarthy    1.0  /bn6djJHhLF6dTIz5H3UvuCFoeLm.jpg  \n",
-      "2   47615.0   Tara Fitzgerald    2.0  /qpS1nff6LgwbWXzS14qsmW6YIOi.jpg  \n",
-      "3  202939.0      Hari Dhillon    3.0  /mzlWa84jhQNjvgHAqtnMxl03yUK.jpg  \n",
-      "4    3131.0  Antonio Banderas    0.0  /85197jARsr06xQ84NhP9YoBL3sR.jpg  \n"
+     "ename": "NameError",
+     "evalue": "name 'cast_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Asegurar que cast_df['cast'] es una lista de diccionarios\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m cast_df[\u001b[33m'\u001b[39m\u001b[33mcast\u001b[39m\u001b[33m'\u001b[39m] = \u001b[43mcast_df\u001b[49m[\u001b[33m'\u001b[39m\u001b[33mcast\u001b[39m\u001b[33m'\u001b[39m].apply(\u001b[38;5;28;01mlambda\u001b[39;00m x: ast.literal_eval(x) \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;28;01melse\u001b[39;00m x)\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# Expandir la lista de diccionarios\u001b[39;00m\n\u001b[32m      5\u001b[39m cast_exploded = cast_df.explode(\u001b[33m'\u001b[39m\u001b[33mcast\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'cast_df' is not defined"
      ]
     }
    ],
@@ -444,31 +464,29 @@
     "# Convertir la columna 'cast' en un DataFrame con las claves desanidadas\n",
     "cast_normalized = pd.json_normalize(cast_exploded['cast'])\n",
     "\n",
-    "# Ver los primeros registros\n",
-    "print(cast_normalized.head())"
+    "print(cast_normalized.sample(10, random_state=42))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "         id              name               character  gender\n",
-      "0     585.0      Rutger Hauer              David Marx     2.0\n",
-      "1   37041.0   Andrew McCarthy             Kurt Bishop     2.0\n",
-      "2   47615.0   Tara Fitzgerald            Kris Paddock     1.0\n",
-      "3  202939.0      Hari Dhillon               Mark Ohai     0.0\n",
-      "4    3131.0  Antonio Banderas  Eduardo 'Eddie' Deacon     2.0\n"
+     "ename": "NameError",
+     "evalue": "name 'cast_normalized' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m cast_final = \u001b[43mcast_normalized\u001b[49m[[\u001b[33m'\u001b[39m\u001b[33mid\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mname\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mcharacter\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mgender\u001b[39m\u001b[33m'\u001b[39m]].sample(n=\u001b[32m15\u001b[39m, random_state=\u001b[32m42\u001b[39m)\n\u001b[32m      2\u001b[39m \u001b[38;5;28mprint\u001b[39m(cast_final)\n",
+      "\u001b[31mNameError\u001b[39m: name 'cast_normalized' is not defined"
      ]
     }
    ],
    "source": [
-    "cast_final = cast_normalized[['id', 'name', 'character', 'gender']]\n",
-    "print(cast_final.head())\n"
+    "cast_final = cast_normalized[['id', 'name', 'character', 'gender']].sample(n=15, random_state=42)\n",
+    "print(cast_final)\n"
    ]
   },
   {
